@startuml

title __GUI's Class Diagram__\n

  namespace  {
    namespace UI {
      class GUI.CarController {
          + timer : Timer
          + vehicles : ArrayList<MotorizedVehicle>
          - delay : int
          + CarController()
          ~ LockCoordinates()
          ~ brake()
          ~ gas()
          ~ invertDirection()
          ~ lowerBed()
          ~ outOfPanel()
          ~ raiseBed()
          ~ startCars()
          ~ stopCars()
          ~ turboOff()
          ~ turboOn()
      }
    }
  }
  

  namespace  {
    namespace UI {
      class GUI.CarController.TimerListener {
          + actionPerformed()
      }
    }
  }
  

  namespace  {
    namespace UI {
      class GUI.CarView {
          ~ brakeButton : JButton
          ~ controlPanel : JPanel
          ~ gasAmount : int
          ~ gasButton : JButton
          ~ gasLabel : JLabel
          ~ gasPanel : JPanel
          ~ gasSpinner : JSpinner
          ~ liftBedButton : JButton
          ~ lowerBedButton : JButton
          ~ startButton : JButton
          ~ stopButton : JButton
          ~ turboOffButton : JButton
          ~ turboOnButton : JButton
          {static} - X : int
          {static} - Y : int
          + CarView()
          - initComponents()
      }
    }
  }
  

  namespace  {
    namespace UI {
      class GUI.DrawPanel {
          ~ vehicleGUIs : ArrayList<VehicleGUI>
          + DrawPanel()
          # paintComponent()
      }
    }
  }
  

  namespace  {
    namespace UI {
      class GUI.VehicleGUI {
          - image : BufferedImage
          - point : Point
          + VehicleGUI()
          + getImage()
          + getPoint()
          + getVehicle()
          ~ moveIt()
          ~ selectPicPath()
      }
    }
  }
  

  GUI.CarController o-- GUI.CarView : frame
  GUI.CarController +-down- GUI.CarController.TimerListener
  GUI.CarController.TimerListener .up.|> java.awt.event.ActionListener
  GUI.CarView -up-|> javax.swing.JFrame
  GUI.CarView o-- GUI.CarController : carC
  GUI.CarView o-- GUI.DrawPanel : drawPanel
  GUI.DrawPanel -up-|> javax.swing.JPanel
  GUI.VehicleGUI o-- Model.MotorizedVehicle : vehicle


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
